syntax = "proto3";

package angel.serving;
option java_multiple_files = false;
option java_package = "com.tencent.angel.serving.apis.prediction";
option java_outer_classname = "GetModelMetadataProtos";

import "google/protobuf/any.proto";
import "apis/common/model.proto";


message GetModelMetadataRequest {
  // Model Specification indicating which model we are querying for metadata.
  // If version is not specified, will use the latest (numerical) version.
  ModelSpec model_spec = 1;
  // Metadata fields to get. Currently supported: "signature_def".
  repeated string metadata_field = 2;
}

message GetModelMetadataResponse {
  // Model Specification indicating which model this metadata belongs to.
  ModelSpec model_spec = 1;
  // Map of metadata field name to metadata field. The options for metadata
  // field name are listed in GetModelMetadataRequest. Currently supported:
  // "signature_def".
  map<string, google.protobuf.Any> metadata = 2;
}
