syntax = "proto3";

package angel.serving;
option java_multiple_files = false;
option java_package = "com.tencent.angel.serving.apis.prediction";
option java_outer_classname = "RegressionProtos";

import "apis/common/input.proto";
import "apis/common/model.proto";



// Regression result for a single item (tensorflow.Example).
message Regression {
  float value = 1;
}

// Contains one result per input example, in the same order as the input in
// RegressionRequest.
message RegressionResult {
  repeated Regression regressions = 1;
}

// RPC interfaces.

message RegressionRequest {
  // Model Specification. If version is not specified, will use the latest
  // (numerical) version.
  ModelSpec model_spec = 1;

  // Input data.
  Input input = 2;
}

message RegressionResponse {
  // Effective Model Specification used for regression.
  ModelSpec model_spec = 2;

  RegressionResult result = 1;
}
